// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update_department_v1 validates departmentId: no deparmentId 1`] = `
DirectoryError {
  "code": "invalid_department_id",
  "error": Object {
    "code": "invalid_department_id",
    "message": "Department id must be present",
    "params": Object {
      "departmentId": 0,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`update_department_v1 validates name: long name 1`] = `
DirectoryError {
  "code": "invalid_name",
  "error": Object {
    "code": "invalid_name",
    "message": "Name must be from 2 to 40 letters",
    "params": Object {
      "departmentId": 8,
      "name": "11111111111111111111111111111111111111111",
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`update_department_v1 validates name: short name 1`] = `
DirectoryError {
  "code": "invalid_name",
  "error": Object {
    "code": "invalid_name",
    "message": "Name must be from 2 to 40 letters",
    "params": Object {
      "departmentId": 8,
      "name": "1",
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`update_department_v1 validates parentId: invalid parentId 1`] = `
DirectoryError {
  "code": "invalid_parent_id",
  "error": Object {
    "code": "invalid_parent_id",
    "message": "Department parent id must be valid",
    "params": Object {
      "departmentId": 8,
      "parentId": 0,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;
